--- a/Universal/Universal.Edge/MainPage.xaml
+++ b/Universal/Universal.Edge/MainPage.xaml
@@ -8,6 +8,36 @@
     mc:Ignorable="d">
 
     <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
-
+        <Grid.RowDefinitions>
+            <RowDefinition Height="Auto" />
+            <RowDefinition Height="Auto" />
+            <RowDefinition Height="*" />
+        </Grid.RowDefinitions>
+        <Grid Grid.Row="0" >
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="Auto"/>
+                <ColumnDefinition Width="Auto"/>
+                <ColumnDefinition Width="Auto"/>
+            </Grid.ColumnDefinitions>
+            <Button Click="ButtonBase_OnClick" Grid.Column="0" Margin="10" >
+                It's Magic
+            </Button>
+            <Button Click="Redraw_OnClick" Grid.Column="1" Margin="10" >
+                Redraw
+            </Button>
+            <Button Click="Adjust_OnClick" Grid.Column="2" Margin="10" >
+                Adjust
+            </Button>
+        </Grid>
+        <Grid Grid.Row="1" >
+            <Slider x:Name="SpeedSlider" Maximum="10000" Minimum="1" Value="2000" Header="Speed" StepFrequency="10" />
+        </Grid>
+        <Grid Grid.Row="2" >
+            <ScrollViewer ZoomMode="Enabled">
+                <Canvas Name="MyCanvas" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" >
+                    <Image x:Name="MyImage" Stretch="Uniform" Canvas.Top="0" Canvas.Left="0" /> 
+                </Canvas>
+            </ScrollViewer>
+        </Grid>
     </Grid>
 </Page>
