--- a/Universal/Universal.Edge/MainPage.xaml
+++ b/Universal/Universal.Edge/MainPage.xaml
@@ -18,6 +18,7 @@
                 <ColumnDefinition Width="Auto"/>
                 <ColumnDefinition Width="Auto"/>
                 <ColumnDefinition Width="Auto"/>
+                <ColumnDefinition Width="Auto"/>
             </Grid.ColumnDefinitions>
             <Button Click="ButtonBase_OnClick" Grid.Column="0" Margin="10" >
                 It's Magic
@@ -27,6 +28,9 @@
             </Button>
             <Button Click="Adjust_OnClick" Grid.Column="2" Margin="10" >
                 Adjust
+            </Button>
+            <Button Click="Adjust2_OnClick" Grid.Column="3" Margin="10" >
+                Adjust 2
             </Button>
         </Grid>
         <Grid Grid.Row="1" >
