--- a/Universal/Universal.Edge/TestPage.xaml
+++ b/Universal/Universal.Edge/TestPage.xaml
@@ -1,11 +1,12 @@
 ﻿<Page
-    x:Class="Universal.Edge.MainPage"
+    x:Class="Universal.Edge.TestPage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="using:Universal.Edge"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    mc:Ignorable="d">
+    mc:Ignorable="d"
+    Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
 
     <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
         <Grid.RowDefinitions>
@@ -19,10 +20,9 @@
                 <ColumnDefinition Width="Auto"/>
                 <ColumnDefinition Width="Auto"/>
                 <ColumnDefinition Width="Auto"/>
-                <ColumnDefinition Width="Auto"/>
             </Grid.ColumnDefinitions>
             <Button Click="ButtonBase_OnClick" Grid.Column="0" Margin="10" >
-                It's Magic
+                Begin
             </Button>
             <Button Click="Redraw_OnClick" Grid.Column="1" Margin="10" >
                 Redraw
@@ -32,9 +32,6 @@
             </Button>
             <Button Click="Adjust2_OnClick" Grid.Column="3" Margin="10" >
                 Adjust 2
-            </Button>
-            <Button Click="Navigate_OnClick" Grid.Column="4" Margin="10" >
-                Navigate
             </Button>
         </Grid>
         <Grid Grid.Row="1" >
